<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataFormActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBotton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="694dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="37dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="38dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="374dp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/userName"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft2"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight2"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop2" />

    <TextView
        android:id="@+id/textViewCPF"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/cpfId"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/e_mail"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewCPF" />

    <Button
        android:id="@+id/buttonShowDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:onClick="showDataFom"
        android:text="@string/show_details"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonBack"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:onClick="backToLogin"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft2"
        app:layout_constraintTop_toTopOf="@+id/buttonShowDetails" />
</androidx.constraintlayout.widget.ConstraintLayout>