<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="38dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="38dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBotton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="694dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="374dp" />

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emial_cpf"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <EditText
        android:id="@+id/editTextUserPwd"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextUserId"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserId" />

    <Button
        android:id="@+id/buttonUserPwd"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:onClick="validateAccess"
        android:text="@string/buttonLogin"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserPwd" />

    <TextView
        android:id="@+id/textViewErrorLogin"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="28dp"
        android:textColor="#BC1010"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserId"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

</androidx.constraintlayout.widget.ConstraintLayout>